# het-kirvin-project

./: .gitignore  404.html  Dockerfile  Procfile  README.md  het-kirvin-project.code-workspace  index.html  index.txt  pyproject.toml
.github/workflows/: actions.yml
_next/static/chunks/: 114-305b2479dbdaa76f.js  171-f9bfa5ed86095d91.js  273-90316ef9abd91eb0.js  3bcdfda6-c50a0afc0a724ee6.js  472-2e91e643be70d363.js  472-8ea3357c6fac1d72.js  475-23b38a8986dc7bd9.js  475-538d124ecbc75aa6.js  475-b1a058ddc642242f.js  52271efe-4e21891a81611cf1.js  52271efe-9ce451b6952fa61f.js  544-75be28f9266abc5c.js  544-abe339ba851f0938.js  544-ed1626bef6994bbf.js  655-f64f1d6f3d789d13.js  778-83ab813c7295befb.js  793-10e90d19fec5afe9.js  895-caf1d372ca13cd8f.js  main-1bcf2813658f1db2.js  main-58f86832e9d71690.js  webpack-3129bfaa737c9c9f.js  webpack-3b4e5b47a53d7187.js  webpack-4c0e977faeb18224.js  webpack-7a69c4b12e01f0a1.js  (+6 more)
analysis/: Dockerfile  README.md  main.py  pyproject.toml
analysis/kirvin/: clean.py  columns.py  create_tab.py  download.py  load.py  stations.py
dashboard/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.tsx  page.module.css  page.tsx  providers.tsx
dashboard/components/: card-day-statistics.tsx  card-max-temperature.tsx  card-min-temperature.tsx  card-most-rain.tsx  card-most-sunshine.tsx  card-with-value.tsx  chart.tsx  date-range-picker.tsx  navigation.tsx  rain-per-day.tsx  sunshine-per-station.tsx  temperature-per-station.tsx
kirvin/: clean.py  load.py  main.py
(+200 files in other folders)
