[tool.poetry]
name = "kirvin"
version = "0.1.0"
description = ""
authors = ["Vince van Noort <vincevannoort@gmail.com>"]
readme = "README.md"

[tool.ruff]
select = ["E", "F", "B", "Q", "W", "I001"]
line-length = 100

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.3"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
